EMBCDFA-756 partial commit

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-md-6">
           <span class="page-subheadbold">This page is for homeowners and residential tenants.</span><br />
-          If you are a small businesses, farms, and charitable organizations your process is different: <a target="_blank" href="https://submit.digital.gov.bc.ca/app/form/submit?f=b0fe2afe-49c0-4a4b-a89f-4c9e2f2466db">DFA for small business, farms, and charitable organizations</a>
+          If you are a small business, farm, or charitable organization your process is different: <a target="_blank" href="https://submit.digital.gov.bc.ca/app/form/submit?f=b0fe2afe-49c0-4a4b-a89f-4c9e2f2466db">DFA for small business, farms, and charitable organizations</a>
 If you're an Indigenous community or local government your process is different: <a target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa">DFA for community recovery</a>
         </div>
       <div class="col-md-6"></div>
