--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -55,6 +55,7 @@
                <button
                       class="application-button whitebutton"
                       type="button"
+                       (click)="EditCleanUpLog(applItem.applicationId)"
                     >
                       Add to Clean Up Log
                 </button>
@@ -62,6 +63,7 @@
                <button
                       class="application-button whitebutton"
                       type="button"
+                       (click)="EditDamagedItems(applItem.applicationId)"
                     >
                       Add to Damaged Items
                 </button>
@@ -69,6 +71,7 @@
                <button
                       class="application-button whitebutton"
                       type="button"
+                       (click)="EditSupportingDocs(applItem.applicationId)"
                     >
                       Add Supporting Docs
                 </button>
