--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -1,4 +1,5 @@
-<mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
+<mat-card class="card-align" [ngStyle]="{'pointer-events': vieworedit === 'view' ? 'none' : ''}" style="border: none;"
+          [class.mat-elevation-z0]="true">
   <mat-card-content>
 
   <p class="sub-heading" style="font-size: 20px">Clean Up Log</p>
